# amx

./: COPYRIGHT  INSTALL.md  README.md  TASKS
src/: .gitignore  CMakeLists.txt  pyproject.toml
src/c/dsp/: centre.c  filters.c  lfe.c
src/c/dsp/include/: centre.h  filters.h  lfe.h
src/c/libwav/: CMakeLists.txt
src/c/src/: main.c
src/lib/: Makefile  wav.c  wav.h
src/libwav/: wav.h
src/python/: .gitignore  cli.py  io_cbridge.py
